syntax = "proto3";

option java_package = "protobuf.mlxfeature";
option java_outer_classname ="Feature";

message KVPair {
  string key = 1;
  string value = 2;
}

message UserFeature
{
  repeated KVPair pairs = 1;
}

message RequestFeature
{
  repeated KVPair pairs = 1;
}

message ItemFeature
{
  repeated KVPair pairs = 1;
}

message RawFeature
{
  UserFeature user_feature = 1;
  RequestFeature request_feature = 2;
  repeated ItemFeature item_feature = 3;
}